--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "schema validation laravel"
     ],
     "require": {
+        "php": "^7.2|^8.0",
         "league/openapi-psr7-validator": "^0.16",
         "spatie/laravel-package-tools": "dev-master"
     },
