--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "schema validation laravel"
     ],
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.4|^8.0",
+        "guzzlehttp/psr7": "^1.8",
         "league/openapi-psr7-validator": "^0.16",
         "spatie/laravel-package-tools": "dev-master"
     },
