--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
+        "guzzlehttp/psr7": "^1.8|^2.0",
         "league/openapi-psr7-validator": "^0.17",
         "spatie/laravel-package-tools": "^1.11"
     },
