--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,20 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        laravel: [7.30.*, 8.*]
-        php: [7.4, 8.0]
+        laravel: [7.30.*, 8.*, 9.*]
+        php: [7.4, 8.0, 8.1]
         include:
           - laravel: 7.30.*
             testbench: 5.*
           - laravel: 8.*
             testbench: 6.*
+          - laravel: 9.*
+            testbench: 7.*
+        exclude:
+          - laravel: 9.*
+            php: 7.4
+          - laravel: 7.30.*
+            php: 8.1
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }}
 
