--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "guzzlehttp/psr7": "^1.8|^2.0",
+        "guzzlehttp/psr7": "^1.8 || ^2.0",
         "league/openapi-psr7-validator": "^0.18",
         "spatie/laravel-package-tools": "^1.11"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.18",
+        "friendsofphp/php-cs-fixer": "^2.18 || ^3.1",
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^6.14",
         "phpunit/phpunit": "^9.5"
