--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "spatie/laravel-package-tools": "^1.11"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.18 || ^3.1",
+        "friendsofphp/php-cs-fixer": "^3.11",
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^6.14",
         "phpunit/phpunit": "^9.5"
